--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,10 +7,7 @@
     <a class="navbar-brand" href="/">ToDoリスト</a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
-        <% if false %>
-          <%= link_to 'Log in', new_user_session_path, class: "nav-item nav-link" %>
-          <%= link_to 'Sign up', new_user_registration_path, class: "nav-item nav-link" %>
-        <% end %>
+        <%= link_to '検索', new_parenttask_path, class: "nav-item nav-link" %>
       </div>
     </div>
     </div>
